# spec-tracer

./: .gitignore  LICENSE  README.md  build_pyramid.py  prd.md  pyproject.toml  run_local.py  spectracer-report.schema.json  spectracer.config.json  tracer.config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: CNAME  architecture.html  ci-cd.html  features.html  index.html  installation.html  usage.html
docs/css/: style.css
features/: coverage.feature  coverage_dashboard.feature  coverage_edge_cases.feature  coverage_health.feature  coverage_internals.feature  coverage_json_output.feature  coverage_linking.feature  coverage_module_scope.feature
features/steps/: coverage_steps.py
spec_tracer/: __init__.py  aggregator.py  cli.py  collectors.py  linker.py  models.py  parsers.py  renderers.py  report_model.py
tests/: test_phase1.py
tests/fixtures/e2e_coverage/: e2e.json
tests/fixtures/fail_on_gate/: unit.xml
tests/fixtures/fc001/: unit.xml
tests/fixtures/fc002/: e2e.json  (+1 more)
tests/integration/: conftest.py  test_e2e_coverage.py  test_e2e_module_scope.py  test_edge_cases.py  test_fail_on.py  test_integration_linking.py  test_json_report.py  test_missing_required_layer.py  test_phase1.py  test_phase2.py  test_phase2_statuses.py  test_phase3.py  test_phase4.py  test_status_badges.py  test_unit_linking.py
tests/unit/: test_aggregator.py  test_build_pyramid.py  test_cli.py  test_renderers.py  test_report_model.py
unified_test_tracer/: __init__.py  aggregator.py  cli.py  linker.py  models.py  parsers.py  renderers.py  report_model.py
(+33 files in other folders)
