[project]
name = "unified-test-tracer"
version = "0.1.0"
description = "CLI tool that collates test results from **Unit, Integration, and E2E** test suites into a single HTML report."
requires-python = ">=3.12"
dependencies = [
  "Jinja2>=3.1"
]
[project.scripts]
unified-test-tracer = "build_pyramid:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "behave>=1.2",
]
[tool.setuptools.packages.find]
exclude = ["features*", "reports*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
